--- a/static/css/main.css
+++ b/static/css/main.css
@@ -314,34 +314,35 @@ img.left, figure.left {float: right; margin: 0 0 2em 2em;}
  *   main page content    *
  **************************/
 #content {
-	background: #fff;
-	border-radius: 8px;
-	-moz-border-radius: 8px;
-	-webkit-border-radius: 8px;
-	float: left;
-	margin: 1em 10px 2em 7%;
-	background: #fff;
-	overflow: hidden;
-	padding: 20px 3.5%;
-	min-width: 500px;
-	width: 55%;
-	font-size: 107%;
+    background: #fff;
+    float: left;
+    margin: 30px 0.75% 30px 5%;
+    background: #fff;
+    overflow: hidden;
+    padding: 45px 5.75%;
+    min-width: 500px;
+    width: 54%;
+    font-size: 110%;
+
+    border-radius: 8px;
+    -moz-border-radius: 8px;
+    -webkit-border-radius: 8px;
 }
 
 /*
  * Sidebar and widgets
  */
 #sidebar {
-	float: right;
-	margin: 1em 7% 2em 10px;
-	background: #fff;
-	overflow: hidden;
-	padding: 20px 20px;
-	width: 17%;
-	
-	border-radius: 8px;
-	-moz-border-radius: 8px;
-	-webkit-border-radius: 8px;
+    float: right;
+    margin: 30px 5% 30px 0.75%;
+    background: #fff;
+    overflow: hidden;
+    padding: 12px 2%;
+    width: 19%;
+
+    border-radius: 8px;
+    -moz-border-radius: 8px;
+    -webkit-border-radius: 8px;
 }
 
 #sidebar ul {list-style: none; margin: 0;}
@@ -364,12 +365,15 @@ img.left, figure.left {float: right; margin: 0 0 2em 2em;}
 }
 
 #sidebar a:hover, #sidebar a:active {
-	color: #fff;
-	background-color: #bd2b2b;
-	text-decoration:none
+    color: #fff;
+    background-color: #ad2a2a;
+    text-decoration:none
 }
 
-#sidebar li.active a {color: white;}
+#sidebar li.active a {
+    background-color: #ad2a2a;
+    color: white;
+}
 
 #sidebar li:last-child,
 #sidebar li:last-child a {border: 0}
