Make archives page title an entry title

--- a/templates/archives.html
+++ b/templates/archives.html
@@ -5,9 +5,9 @@
 {% block content %}
 <section id="content" class="body">
 {% if BLOGTITLE %}
-<h1>Archives for {{ BLOGTITLE }}</h1>
+<h1 class="entry-title">Archives for {{ BLOGTITLE }}</h1>
 {% else %}
-<h1>Archives for {{ SITENAME }}</h1>
+<h1 class="entry-title">Archives for {{ SITENAME }}</h1>
 {% endif %}
 
 <dl>
