--- a/static/css/main.css
+++ b/static/css/main.css
@@ -13,7 +13,7 @@ html {
 body {
     background: #F5F4EF;
     color: #000305;
-    font-size: 87.5%; /* Base font size: 14px */
+    font-size: 91%;
     font-family: 'Trebuchet MS', Trebuchet, 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     line-height: 1.429;
     margin-left:auto;
@@ -27,17 +27,17 @@ body {
 
 /* Headings */
 h1 {font-size: 1.7em }
-h2 {font-size: 1.571em}  /* 22px */
-h3 {font-size: 1.429em}  /* 20px */
-h4 {font-size: 1.286em}  /* 18px */
-h5 {font-size: 1.143em}  /* 16px */
-h6 {font-size: 1em}      /* 14px */
+h2 {font-size: 1.571em}
+h3 {font-size: 1.429em}
+h4 {font-size: 1.286em}
+h5 {font-size: 1.143em}
+h6 {font-size: 1em}
 
 h1, h2, h3, h4, h5, h6 {
     font-weight: 400;
     line-height: 1.1;
-    margin-top: 1em;
-    margin-bottom: .4em;
+    margin-top: 1.143em;
+    margin-bottom: .5em;
     font-family: arial, serif;
 }
 
@@ -106,9 +106,9 @@ pre {
     color: #000;
     margin: 10px;
     overflow: auto;
-    font-size:110%;
+    font-size:105%;
 }
-code { font-size: 110%; }
+code { font-size: 105%; }
 
 /* Quotes */
 blockquote {
@@ -316,13 +316,12 @@ img.left, figure.left {float: right; margin: 0 0 2em 2em;}
 #content {
     background: #fff;
     float: left;
-    margin: 30px 0.75% 30px 5%;
+    margin: 35px 0.75% 35px 5%;
     background: #fff;
     overflow: hidden;
-    padding: 45px 5.75%;
+    padding: 45px 7.75%;
     min-width: 500px;
-    width: 54%;
-    font-size: 110%;
+    width: 50%;
 
     border-radius: 8px;
     -moz-border-radius: 8px;
@@ -339,6 +338,7 @@ img.left, figure.left {float: right; margin: 0 0 2em 2em;}
     overflow: hidden;
     padding: 12px 2%;
     width: 19%;
+    font-size: 97%;
 
     border-radius: 8px;
     -moz-border-radius: 8px;
@@ -478,7 +478,7 @@ li:last-child .hentry, #content > .hentry {border: 0; margin: 0;}
 .hentry img{display : none ;}
 
 /* Featured article or title of article */
-.entry-title {font-size: 2.7em; margin-bottom: 25px; margin-top: 0;}
+.entry-title {font-size: 2.7em; margin-top: 0; margin-bottom: .7em }
 .entry-title a:link, .entry-title a:visited { text-decoration:none; color: #000305 }
 .entry-title a:visited {background-color: #fff;}
 .entry-title a:hover, .entry-title a:active { color: #9d1f1f; text-shadow: none; }
@@ -494,11 +494,9 @@ li:last-child .hentry, #content > .hentry {border: 0; margin: 0;}
 .hentry header a:hover, .hentry header a:active { color: #9d1f1f; text-shadow:none; }
 .hentry header h1 { font-size: 2.1em; margin-top: 0;}
 
-
-/** TODO These and below I have no clue what they do */
+/** Post info and content footer */
 .hentry .post-info * {font-style: normal;}
 
-/* Content */
 .hentry footer {margin-bottom: 2em;}
 
 .hentry footer address {display: inline;}
