--- a/templates/base.html
+++ b/templates/base.html
@@ -71,8 +71,8 @@
 
         <footer id="footer" class="body">
                 <address id="about" class="vcard body">
-                        Powered by <a href="http://alexis.notmyidea.org/pelican/">pelican</a>,
-                        <a href="http://python.org">python</a> and <a href="http://jinja.pocoo.org/">Jinja2</a>.
+                        Powered by <a href="https://getpelican.com/">pelican</a>,
+                        <a href="https://python.org">python</a> and <a href="http://jinja.pocoo.org/">Jinja2</a>.
                 </address><!-- /#about -->
                 {% if FOOTER_INSERT %}{{ FOOTER_INSERT }}{% endif %}
         </footer><!-- /#footer -->
