Change social widget (spacing between icons and text)

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -387,11 +387,11 @@ img.left, figure.left {float: right; margin: 0 0 2em 2em;}
     background-position: 3px 6px;
 }
 
-.social a[href*='atom.xml']:before {content: url('../images/icons/rss.png'); margin-right: 2px; vertical-align: -3px;}
-.social a[href*='rss.xml']:before {content: url('../images/icons/rss.png'); margin-right: 2px; vertical-align: -3px;}
-.social a[href*='stackoverflow.com']:before {content: url('../images/icons/stackoverflow.png'); margin-right: 2px; vertical-align: -3px;}
-.social a[href*='github.com']:before {content: url('../images/icons/github.png'); margin-right: 2px; vertical-align: -3px;}
-.social a[href*='gitlab.com']:before {content: url('../images/icons/gitlab.png'); margin-right: 2px; vertical-align: -3px;}
+.social a[href*='atom.xml']:before {content: url('../images/icons/rss.png') " "; margin-right: 2px; vertical-align: -3px;}
+.social a[href*='rss.xml']:before {content: url('../images/icons/rss.png') " "; margin-right: 2px; vertical-align: -3px;}
+.social a[href*='stackoverflow.com']:before {content: url('../images/icons/stackoverflow.png') " "; margin-right: 2px; vertical-align: -3px;}
+.social a[href*='github.com']:before {content: url('../images/icons/github.png') " "; margin-right: 2px; vertical-align: -3px;}
+.social a[href*='gitlab.com']:before {content: url('../images/icons/gitlab.png') " "; margin-right: 2px; vertical-align: -3px;}
 
 /* Tagcloud */
 ul.tagcloud {
