--- a/templates/widget-social.html
+++ b/templates/widget-social.html
@@ -3,10 +3,10 @@
 		<h2>Social</h2>
 		<ul>
 		    {% if FEED_ALL_ATOM %}
-		    <li><a href="{{ SITEURL }}/{{ FEED_ALL_ATOM }}" rel="alternate">Article atom feed</a></li>
+		    <li><a href="{{ SITEURL }}/{{ FEED_ALL_ATOM }}" rel="alternate">Blog articles (Atom)</a></li>
 		    {% endif %}
 		    {% if FEED_RSS %}
-		    <li><a href="{{ SITEURL }}/{{ FEED_RSS }}" rel="alternate">Article rss feed</a></li>
+		    <li><a href="{{ SITEURL }}/{{ FEED_RSS }}" rel="alternate">Blog articles (RSS)</a></li>
 		    {% endif %}
 
 		{% for name, link in SOCIAL %}
