Do not use Trebuchet font

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -14,7 +14,7 @@ body {
     background: #F5F4EF;
     color: #000305;
     font-size: 91%;
-    font-family: 'Trebuchet MS', Trebuchet, 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     line-height: 1.429;
     margin-left:auto;
     margin-right:auto;
