--- a/templates/page.html
+++ b/templates/page.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}{{ page.title }}{% endblock %}
+{% block title %}{{ page.title }}{% if page["subtitle"] is defined %} | {{ page.subtitle }}{% endif %}{% endblock %}
 {% block content %}
 <section id="content" class="body">
     <h1 class="entry-title"><a href="{{ SITEURL }}/{{ page.url }}">{{ page.title }}</a></h1>
