Style class footerbox

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -437,6 +437,10 @@ ul.tagcloud .list-group-item <span>.badge {
     margin: 20px auto;
 }
 
+span.footerbox {
+    width: 50px;
+}
+
 /****************
  *    About     *
  ****************/
