--- a/templates/publication_infos.html
+++ b/templates/publication_infos.html
@@ -6,18 +6,25 @@ replace(";", " dna ", 1) | reverse | replace(";", ", ") | trim }}.
 
 {# Title #}
 <em>
-{%- if article.puburl | length > 0 -%}
-<a href="{{article.puburl}}">
-{%- elif article.pubdoi | length > 0 -%}
-<a href="https://dx.doi.org/{{article.pubdoi}}">
+{%- if article.puburl | length > 0 %}
+	{% set url = article.puburl %}
+	{% if url[0] == "/" %}
+		{% set url = SITEURL + url %}
+	{% endif %}
+{% elif article.pubdoi | length > 0 %}
+	{% set url = "https://dx.doi.org/{{article.pubdoi}}" %}
+{% endif %}
+
+{%- if url -%}
+<a href="{{url}}">
 {%- endif -%}
 {{article.pubtitle | default(article.title)}}
-{%- if article.puburl | length > 0 or article.pubdoi | length > 0 -%}
+{%- if url -%}
 </a>
 {%- endif %}.</em>
 
 {# Article #}
-{% if article.pubkind | default("article") == "article" %}
+{%- if article.pubkind | default("article") == "article" -%}
 
 <br />
 {% if article.pubstatus == "submitted" or article.pubstatus == "accepted" -%}
@@ -48,26 +55,23 @@ replace(";", " dna ", 1) | reverse | replace(";", ", ") | trim }}.
 {# Unknown #}
 {% else %}
 <strong>Unknown article pubkind {{article.pubkind}}</strong>
-{% endif %}
+{% endif -%}
 
 <br />
 {# Annotations and attachments #}
-{% if article.pubpreprint | length > 0 -%}
-[<a href="{{article.pubpreprint}}">preprint</a>]
-{% endif %}
-{% if article.pubslides | length > 0 -%}
-[<a href="{{article.pubslides}}">slides</a>]
-{% endif %}
-{% if article.pubcode | length > 0 -%}
-[<a href="{{article.pubcode}}">code</a>]
-{% endif %}
-{% if article.pubdata | length > 0 -%}
-[<a href="{{article.pubdata}}">data</a>]
-{% endif %}
-{% if article.pubdoi | length > 0 -%}
-[DOI <a href="https://dx.doi.org/{{article.pubdoi}}">{{article.pubdoi}}</a>]
-{% endif %}
-{% if article.pubbib | length > 0 -%}
-[<a href="{{article.pubbib}}">bib</a>]
-{% endif %}
+{% for attname in ["preprint", "slides", "code", "data", "doi", "bib"] %}
+	{% if article | attr("pub" + attname) | length > 0 -%}
+		{% if attname == "doi" %}
+			{% set url = "https://dx.doi.org/" + article.pubdoi %}
+			{% set text = "DOI " + article.pubdoi %}
+		{% else %}
+			{% set url = article | attr("pub" + attname) %}
+			{% set text = attname %}
+		{% endif %}
+		{% if url[0] == "/" %}
+			{% set url = SITEURL + url %}
+		{% endif -%}
+		[<a href="{{url}}">{{text}}</a>]
+	{% endif %}
+{% endfor %}
 </td></tr>
