--- a/templates/publication_infos.html
+++ b/templates/publication_infos.html
@@ -59,7 +59,7 @@ replace(";", " dna ", 1) | reverse | replace(";", ", ") | trim }}.
 
 <br />
 {# Annotations and attachments #}
-{% for attname in ["preprint", "slides", "code", "data", "details", "doi", "bib"] %}
+{% for attname in ["doi", "bib", "preprint", "slides", "code", "data", "errata", "details"] %}
 	{% if article | attr("pub" + attname) | length > 0 -%}
 		{% set url = article | attr("pub" + attname) %}
 		{% set urltext = attname %}
