--- a/templates/publication_infos.html
+++ b/templates/publication_infos.html
@@ -66,7 +66,7 @@ replace(";", " dna ", 1) | reverse | replace(";", ", ") | trim }}.
 
 <br />
 {# Annotations and attachments #}
-{% for attname in ["doi", "bib", "preprint", "slides", "code", "data", "errata", "details"] %}
+{% for attname in ["doi", "bib", "preprint", "arxiv", "slides", "code", "data", "errata", "details"] %}
 	{% if article | attr("pub" + attname) | length > 0 -%}
 		{% set url = article | attr("pub" + attname) %}
 		{% set urltext = attname %}
@@ -74,6 +74,10 @@ replace(";", " dna ", 1) | reverse | replace(";", ", ") | trim }}.
 			{% set url = "https://dx.doi.org/" + article.pubdoi %}
 			{% set pretext = "DOI " %}
 			{% set urltext = article.pubdoi %}
+		{% endif %}
+		{% if attname == "arxiv" %}
+			{% set url = "https://arxiv.org/abs/" + article.pubarxiv %}
+			{% set urltext = "arXiv:" + article.pubarxiv %}
 		{% endif %}
 		{% if attname == "details" %}
 			{% set urltext = "further details" %}
