--- a/static/css/main.css
+++ b/static/css/main.css
@@ -153,6 +153,7 @@ aside, nav, article, figure {
 /***** Layout *****/
 img.right figure.right {float: right; margin: 0 0 2em 2em;}
 img.left, figure.left {float: right; margin: 0 0 2em 2em;}
+img.index {float: left; display: block; margin: 0 2em 1.5em 0;}
 
 /****************
  *    Header    *
